Added prides, pronouns, and art divs

--- a/html/ancient.html
+++ b/html/ancient.html
@@ -44,6 +44,18 @@
         <!-- 柏嵜法牌香（Kashizaki no Hakaru no Fudakau） -->
         <section>
           <h4 id="Kashizaki_no_Hakaru_no_Fudakau">柏嵜法牌香</h4>
+          <div class="pride">
+            <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
+            <p class="pronouns">代名詞：</p>
+            <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
+              <img class="pride-flag" src="../img/pride/" alt="" title="">
+            </a>
+            <br>
+          </div>
+          <div class="art-chara">
+            <img class="art" src="../img/fill.png" alt="柏嵜法牌香">
+            <p class="caption">牌香</p>
+          </div>
           <p>失われた都の法者</p>
           <p>
             柏嵜　法　牌香（かしざきのはかるのふだかう）<br>
@@ -69,6 +81,18 @@
         <!-- 遠呂智蛇揺雨（Orochi no Hebi no Yurusame） -->
         <section>
           <h4 id="Orochi_no_Hebi_no_Yurusame">遠呂智蛇揺雨</h4>
+          <div class="pride">
+            <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
+            <p class="pronouns">代名詞：</p>
+            <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
+              <img class="pride-flag" src="../img/pride/" alt="" title="">
+            </a>
+            <br>
+          </div>
+          <div class="art-chara">
+            <img class="art" src="../img/fill.png" alt="遠呂智蛇揺雨">
+            <p class="caption">揺雨</p>
+          </div>
           <p>八つ頭の大蛇の童子</p>
           <p>
             遠呂智　蛇　揺雨（おろちのへびのゆるさめ）<br>
@@ -95,6 +119,18 @@
         <!-- 平也醒上丸（Taira no Yasame no Kamimaru） -->
         <section>
           <h4 id="Taira_no_Yasame_no_Kamimaru">平也醒上丸</h4>
+          <div class="pride">
+            <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
+            <p class="pronouns">代名詞：</p>
+            <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
+              <img class="pride-flag" src="../img/pride/" alt="" title="">
+            </a>
+            <br>
+          </div>
+          <div class="art-chara">
+            <img class="art" src="../img/fill.png" alt="平也醒上丸">
+            <p class="caption">上丸</p>
+          </div>
           <p><ruby>平妖刀<rt>たいらのようとう</rt></ruby></p>
           <p>
             平　也醒　上丸（たいらのやさめのかみまる）<br>
@@ -124,6 +160,18 @@
         <!-- 夜叉町鐵奈我沙（Yashamachi no Kurogane no Nagasa） -->
         <section>
           <h4 id="Yashamachi_no_Kurogane_no_Nagasa">夜叉町鐵奈我沙</h4>
+          <div class="pride">
+            <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
+            <p class="pronouns">代名詞：</p>
+            <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
+              <img class="pride-flag" src="../img/pride/" alt="" title="">
+            </a>
+            <br>
+          </div>
+          <div class="art-chara">
+            <img class="art" src="../img/fill.png" alt="夜叉町鐵奈我沙">
+            <p class="caption">奈我沙</p>
+          </div>
           <p>
             夜叉町　鐵　奈我沙（やしゃまちのくろがねのながさ）<br>
             Yashamachi no Kurogane no Nagasa
@@ -151,6 +199,18 @@
         <!-- 一条久二乃良宗（Ichijo no Kuni no Noramune） -->
         <section>
           <h4 id="Ichijo_no_Kuni_no_Noramune">一条久二乃良宗</h4>
+          <div class="pride">
+            <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
+            <p class="pronouns">代名詞：</p>
+            <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
+              <img class="pride-flag" src="../img/pride/" alt="" title="">
+            </a>
+            <br>
+          </div>
+          <div class="art-chara">
+            <img class="art" src="../img/fill.png" alt="一条久二乃良宗">
+            <p class="caption">乃良宗</p>
+          </div>
           <p>
             一条　久二　乃良宗（いちじょうのくにののらむね）<br>
             Ichijo no Kuni no Noramune
@@ -176,6 +236,18 @@
         <!-- 二条清八太郎（Nijo no Kiyo no Yataro） -->
         <section>
           <h4 id="Nijo_no_Kiyo_no_Yataro">二条清八太郎</h4>
+          <div class="pride">
+            <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
+            <p class="pronouns">代名詞：</p>
+            <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
+              <img class="pride-flag" src="../img/pride/" alt="" title="">
+            </a>
+            <br>
+          </div>
+          <div class="art-chara">
+            <img class="art" src="../img/fill.png" alt="二条清八太郎">
+            <p class="caption">八太郎</p>
+          </div>
           <p>
             二条　清　八太郎（にじょうのきよのやたろう）<br>
             Nijo no Kiyo no Yataro
@@ -201,6 +273,18 @@
         <!-- 三條麹丸雨（Sanjo no Kouji no Marusame） -->
         <section>
           <h4 id="Sanjo_no_Kouji_no_Marusame">三條麹丸雨</h4>
+          <div class="pride">
+            <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
+            <p class="pronouns">代名詞：</p>
+            <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
+              <img class="pride-flag" src="../img/pride/" alt="" title="">
+            </a>
+            <br>
+          </div>
+          <div class="art-chara">
+            <img class="art" src="../img/fill.png" alt="三條麹丸雨">
+            <p class="caption">丸雨</p>
+          </div>
           <p>
             三條　麹　丸雨（さんじょうのこうじのまるさめ）<br>
             Sanjo no Kouji no Marusame
@@ -226,6 +310,18 @@
         <!-- 源蜘彩歌子（Minamoto no Kumo no Ayakashi） -->
         <section>
           <h4 id="Minamoto_no_Kumo_no_Ayakashi">源蜘彩歌子</h4>
+          <div class="pride">
+            <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
+            <p class="pronouns">代名詞：</p>
+            <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
+              <img class="pride-flag" src="../img/pride/" alt="" title="">
+            </a>
+            <br>
+          </div>
+          <div class="art-chara">
+            <img class="art" src="../img/fill.png" alt="源蜘彩歌子">
+            <p class="caption">彩歌子</p>
+          </div>
           <p>
             源　蜘　彩歌子（みなもとのくものあやかし）<br>
             Minamoto no Kumo no Ayakashi
@@ -251,6 +347,18 @@
         <!-- 平榊間美智（Taira no Sakama no Yoshitomo） -->
         <section>
           <h4 id="Taira_no_Sakama_no_Yoshitomo">平榊間美智</h4>
+          <div class="pride">
+            <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
+            <p class="pronouns">代名詞：</p>
+            <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
+              <img class="pride-flag" src="../img/pride/" alt="" title="">
+            </a>
+            <br>
+          </div>
+          <div class="art-chara">
+            <img class="art" src="../img/fill.png" alt="平榊間美智">
+            <p class="caption">美智</p>
+          </div>
           <p>
             平　榊間　美智（たいらのさかまのよしとも）<br>
             Taira no Sakama no Yoshitomo
@@ -276,6 +384,18 @@
         <!-- 藤原裁峰義（Fujiwara no Sai no Mineyoshi） -->
         <section>
           <h4 id="Fujiwara_no_Sai_no_Mineyoshi">藤原裁峰義</h4>
+          <div class="pride">
+            <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
+            <p class="pronouns">代名詞：</p>
+            <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
+              <img class="pride-flag" src="../img/pride/" alt="" title="">
+            </a>
+            <br>
+          </div>
+          <div class="art-chara">
+            <img class="art" src="../img/fill.png" alt="藤原裁峰義">
+            <p class="caption">峰義</p>
+          </div>
           <p>
             藤原　裁　峰義（ふじわらのさいのみねよし）<br>
             Fujiwara no Sai no Mineyoshi
@@ -301,6 +421,18 @@
         <!-- 橘藪根岸仁（Tachibana no Yabune no Kishihito） -->
         <section>
           <h4 id="Tachibana_no_Yabune_no_Kishihito">橘藪根岸仁</h4>
+          <div class="pride">
+            <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
+            <p class="pronouns">代名詞：</p>
+            <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
+              <img class="pride-flag" src="../img/pride/" alt="" title="">
+            </a>
+            <br>
+          </div>
+          <div class="art-chara">
+            <img class="art" src="../img/fill.png" alt="橘藪根岸仁">
+            <p class="caption">岸仁</p>
+          </div>
           <p>
             橘　藪根　岸仁（たちばなのやぶねのきしひと）<br>
             Tachibana no Yabune no Kishihito
@@ -326,6 +458,18 @@
         <!-- 物部鑓殺奈（Mononobe no Yari no Setsuna） -->
         <section>
           <h4 id="Mononobe_no_Yari_no_Setsuna">物部鑓殺奈</h4>
+          <div class="pride">
+            <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
+            <p class="pronouns">代名詞：</p>
+            <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
+              <img class="pride-flag" src="../img/pride/" alt="" title="">
+            </a>
+            <br>
+          </div>
+          <div class="art-chara">
+            <img class="art" src="../img/fill.png" alt="物部鑓殺奈">
+            <p class="caption">殺奈</p>
+          </div>
           <p>
             物部　鑓　殺奈（もののべのやりのせつな）<br>
             Mononobe no Yari no Setsuna
@@ -351,6 +495,18 @@
         <!-- 九条纖本盛（Kujo no Shina no Motomori） -->
         <section>
           <h4 id="Kujo_no_Shina_no_Motomori">九条纖本盛</h4>
+          <div class="pride">
+            <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
+            <p class="pronouns">代名詞：</p>
+            <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
+              <img class="pride-flag" src="../img/pride/" alt="" title="">
+            </a>
+            <br>
+          </div>
+          <div class="art-chara">
+            <img class="art" src="../img/fill.png" alt="九条纖本盛">
+            <p class="caption">本盛</p>
+          </div>
           <p>
             九条　纖　本盛（くじょうのしなのもともり）<br>
             Kujo no Shina no Motomori
@@ -376,6 +532,18 @@
         <!-- 蘇我牀遣仁（Soga no Yuka no Yaruhito） -->
         <section>
           <h4 id="Soga_no_Yuka_no_Yaruhito">蘇我牀遣仁</h4>
+          <div class="pride">
+            <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
+            <p class="pronouns">代名詞：</p>
+            <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
+              <img class="pride-flag" src="../img/pride/" alt="" title="">
+            </a>
+            <br>
+          </div>
+          <div class="art-chara">
+            <img class="art" src="../img/fill.png" alt="蘇我牀遣仁">
+            <p class="caption">遣仁</p>
+          </div>
           <p>
             蘇我　牀　遣仁（そがのゆかのやるひと）<br>
             Soga no Yuka no Yaruhito
@@ -401,6 +569,18 @@
         <!-- 足利畔蒜毬二（Ashikaga no Kurone no Mariji） -->
         <section>
           <h4 id="Ashikaga_no_Kurone_no_Mariji">足利畔蒜毬二</h4>
+          <div class="pride">
+            <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
+            <p class="pronouns">代名詞：</p>
+            <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
+              <img class="pride-flag" src="../img/pride/" alt="" title="">
+            </a>
+            <br>
+          </div>
+          <div class="art-chara">
+            <img class="art" src="../img/fill.png" alt="足利畔蒜毬二">
+            <p class="caption">毬二</p>
+          </div>
           <p>
             足利　畔蒜　毬二（あしかがのくろねのまりじ）<br>
             Ashikaga no Kurone no Mariji
@@ -426,6 +606,18 @@
         <!-- 鷹司闇光之郞（Takatsukasa no Yami no Mitsunoro） -->
         <section>
           <h4 id="Takatsukasa_no_Yami_no_Mitsunoro">鷹司闇光之郞</h4>
+          <div class="pride">
+            <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
+            <p class="pronouns">代名詞：</p>
+            <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
+              <img class="pride-flag" src="../img/pride/" alt="" title="">
+            </a>
+            <br>
+          </div>
+          <div class="art-chara">
+            <img class="art" src="../img/fill.png" alt="鷹司闇光之郞">
+            <p class="caption">光之郞</p>
+          </div>
           <p>
             鷹司　闇　光之郞（たかつかさのやみのみつのろう）<br>
             Takatsukasa no Yami no Mitsunoro
@@ -451,6 +643,18 @@
         <!-- 德川衣世探重（Tokugawa no Iyo no Sagashishige） -->
         <section>
           <h4 id="Tokugawa_no_Iyo_no_Sagashishige">德川衣世探重</h4>
+          <div class="pride">
+            <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
+            <p class="pronouns">代名詞：</p>
+            <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
+              <img class="pride-flag" src="../img/pride/" alt="" title="">
+            </a>
+            <br>
+          </div>
+          <div class="art-chara">
+            <img class="art" src="../img/fill.png" alt="德川衣世探重">
+            <p class="caption">探重</p>
+          </div>
           <p>
             德川　衣世　探重（とくがわのいよのさがししげ）<br>
             Tokugawa no Iyo no Sagashishige
@@ -476,6 +680,18 @@
         <!-- 大炊御門鈴鵜麻（Oinomikado no Suzu no Uma） -->
         <section>
           <h4 id="Oinomikado_no_Suzu_no_Uma">大炊御門鈴鵜麻</h4>
+          <div class="pride">
+            <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
+            <p class="pronouns">代名詞：</p>
+            <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
+              <img class="pride-flag" src="../img/pride/" alt="" title="">
+            </a>
+            <br>
+          </div>
+          <div class="art-chara">
+            <img class="art" src="../img/fill.png" alt="大炊御門鈴鵜麻">
+            <p class="caption">鵜麻</p>
+          </div>
           <p>
             大炊御門　鈴　鵜麻（おおいのみかどのすずのうま）<br>
             Oinomikado no Suzu no Uma
@@ -501,6 +717,18 @@
         <!-- 西園寺綯清宗（Saionji no Nau no Kiyomune） -->
         <section>
           <h4 id="Saionji_no_Nau_no_Kiyomune">西園寺綯清宗</h4>
+          <div class="pride">
+            <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
+            <p class="pronouns">代名詞：</p>
+            <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
+              <img class="pride-flag" src="../img/pride/" alt="" title="">
+            </a>
+            <br>
+          </div>
+          <div class="art-chara">
+            <img class="art" src="../img/fill.png" alt="西園寺綯清宗">
+            <p class="caption">清宗</p>
+          </div>
           <p>
             西園寺　綯　清宗（さいおんじのなうのきよむね）<br>
             Saionji no Nau no Kiyomune
@@ -526,6 +754,18 @@
         <!-- 醍醐猿概（Daigo no Saru no Omune） -->
         <section>
           <h4 id="Daigo_no_Saru_no_Omune">醍醐猿概</h4>
+          <div class="pride">
+            <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
+            <p class="pronouns">代名詞：</p>
+            <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
+              <img class="pride-flag" src="../img/pride/" alt="" title="">
+            </a>
+            <br>
+          </div>
+          <div class="art-chara">
+            <img class="art" src="../img/fill.png" alt="醍醐猿概">
+            <p class="caption">概</p>
+          </div>
           <p>
             醍醐　猿　概（だいごのさるのおおむね）<br>
             Daigo no Saru no Omune
@@ -551,6 +791,18 @@
         <!-- 今出川裙兔雪丸（Imadegawa no Gunto no Setsumaru） -->
         <section>
           <h4 id="Imadagawa_no_Gunto_no_Setsumaru">今出川裙兔雪丸</h4>
+          <div class="pride">
+            <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
+            <p class="pronouns">代名詞：</p>
+            <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
+              <img class="pride-flag" src="../img/pride/" alt="" title="">
+            </a>
+            <br>
+          </div>
+          <div class="art-chara">
+            <img class="art" src="../img/fill.png" alt="今出川裙兔雪丸">
+            <p class="caption">雪丸</p>
+          </div>
           <p>
             今出川　裙兔　雪丸（いまでがわのぐんとのせつまる）<br>
             Imadegawa no Gunto no Setsumaru
@@ -576,6 +828,18 @@
         <!-- 德大寺誇宗沙（Tokudaiji no Hokoru no Munesa） -->
         <section>
           <h4 id="Tokudaiji_no_Hokoru_no_Munesa">德大寺誇宗沙</h4>
+          <div class="pride">
+            <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
+            <p class="pronouns">代名詞：</p>
+            <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
+              <img class="pride-flag" src="../img/pride/" alt="" title="">
+            </a>
+            <br>
+          </div>
+          <div class="art-chara">
+            <img class="art" src="../img/fill.png" alt="德大寺誇宗沙">
+            <p class="caption">宗沙</p>
+          </div>
           <p>
             德大寺　誇　宗沙（とくだいじのほこるのむねさ）<br>
             Tokudaiji no Hokoru no Munesa
@@ -601,6 +865,18 @@
         <!-- 近衛鞠染鮫（Konoe no Mari no Somezame） -->
         <section>
           <h4 id="Konoe_no_Mari_no_Somezame">近衛鞠染鮫</h4>
+          <div class="pride">
+            <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
+            <p class="pronouns">代名詞：</p>
+            <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
+              <img class="pride-flag" src="../img/pride/" alt="" title="">
+            </a>
+            <br>
+          </div>
+          <div class="art-chara">
+            <img class="art" src="../img/fill.png" alt="近衛鞠染鮫">
+            <p class="caption">染鮫</p>
+          </div>
           <p>
             近衛　鞠　染鮫（このえのまりのそめざめ）<br>
             Konoe no Mari no Somezame
@@ -626,6 +902,18 @@
         <!-- 菊亭馬海春盛（Kikutei no Umakai no Harumori） -->
         <section>
           <h4 id="Kikutei_no_Umakai_no_Harumori">菊亭馬海春盛</h4>
+          <div class="pride">
+            <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
+            <p class="pronouns">代名詞：</p>
+            <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
+              <img class="pride-flag" src="../img/pride/" alt="" title="">
+            </a>
+            <br>
+          </div>
+          <div class="art-chara">
+            <img class="art" src="../img/fill.png" alt="菊亭馬海春盛">
+            <p class="caption">春盛</p>
+          </div>
           <p>
             菊亭　馬海　春盛（きくていのうまかいのはるもり）<br>
             Kikutei no Umakai no Harumori
@@ -651,6 +939,18 @@
         <!-- 花山院墨染花清（Kasannoin no Sumizome no Hananokiyo） -->
         <section>
           <h4 id="Kasannoin_no_Sumizome_no_Hananokiyo">花山院墨染花清</h4>
+          <div class="pride">
+            <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
+            <p class="pronouns">代名詞：</p>
+            <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
+              <img class="pride-flag" src="../img/pride/" alt="" title="">
+            </a>
+            <br>
+          </div>
+          <div class="art-chara">
+            <img class="art" src="../img/fill.png" alt="花山院墨染花清">
+            <p class="caption">花清</p>
+          </div>
           <p>
             花山院　墨染　花清（かさんのいんのすみぞめのはなのきよ）<br>
             Kasannoin no Sumizome no Hananokiyo
@@ -676,6 +976,18 @@
         <!-- 遊坂茜志奴呂（Yuuzaka no Akane no Shinuro） -->
         <section>
           <h4 id="Yuuzaka_no_Akane_no_Shinuro">遊坂茜志奴呂</h4>
+          <div class="pride">
+            <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
+            <p class="pronouns">代名詞：</p>
+            <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
+              <img class="pride-flag" src="../img/pride/" alt="" title="">
+            </a>
+            <br>
+          </div>
+          <div class="art-chara">
+            <img class="art" src="../img/fill.png" alt="遊坂茜志奴呂">
+            <p class="caption">志奴呂</p>
+          </div>
           <p>狐の様に帝王</p>
           <p>
             遊坂　茜　志奴呂（ゆうざかのあかねのしぬろ）<br>
