--- a/html/boss.html
+++ b/html/boss.html
@@ -43,6 +43,18 @@
         <!-- 崎鳥サーンプリヤ（Sakidori Sampriya） -->
         <section>
           <h4 id="Sakidori_Sampriya">崎鳥サーンプリヤ</h4>
+          <div class="pride">
+            <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
+            <p class="pronouns">代名詞：</p>
+            <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
+              <img class="pride-flag" src="../img/pride/" alt="" title="">
+            </a>
+            <br>
+          </div>
+          <div class="art-chara">
+            <img class="art" src="../img/fill.png" alt="崎鳥サーンプリヤ">
+            <p class="caption">サーンプリヤ</p>
+          </div>
           <p>空の嬢</p>
           <p>
             崎鳥　サーンプリヤ（さきどり　サーンプリヤ）<br>
@@ -106,6 +118,18 @@
         <!-- テオニムフィ・アポストロプールー（Theonymphi Apostolopoulou） -->
         <section>
           <h4 id="Theonymphi_Apostolopoulou">テオニムフィ・アポストロプールー</h4>
+          <div class="pride">
+            <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
+            <p class="pronouns">代名詞：</p>
+            <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
+              <img class="pride-flag" src="../img/pride/" alt="" title="">
+            </a>
+            <br>
+          </div>
+          <div class="art-chara">
+            <img class="art" src="../img/fill.png" alt="テオニムフィ・アポストロプールー">
+            <p class="caption">テオニムフィ</p>
+          </div>
           <p>迷宮の主人</p>
           <p>
             テオニムフィ・アポストロプールー<br>
