--- a/html/bunoden.html
+++ b/html/bunoden.html
@@ -42,6 +42,18 @@
         <!-- アルクスニス・アリギルトス（Aļģirts Alksnis） -->
         <section>
           <h4 id="Aļģirts_Alksnis">アルクスニス・アリギルトス</h4>
+          <div class="pride">
+            <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
+            <p class="pronouns">代名詞：</p>
+            <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
+              <img class="pride-flag" src="../img/pride/" alt="" title="">
+            </a>
+            <br>
+          </div>
+          <div class="art-chara">
+            <img class="art" src="../img/fill.png" alt="アルクスニス・アリギルトス">
+            <p class="caption">アリギルトス</p>
+          </div>
           <p>智識の瞳</p>
           <p>
             アルクスニス・アリギルトス<br>
@@ -67,6 +79,18 @@
         <!-- アルクスネ・キェルスタ（Ķersta Alksne） -->
         <section>
           <h4 id="Ķersta_Alksne">アルクスネ・キェルスタ</h4>
+          <div class="pride">
+            <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
+            <p class="pronouns">代名詞：</p>
+            <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
+              <img class="pride-flag" src="../img/pride/" alt="" title="">
+            </a>
+            <br>
+          </div>
+          <div class="art-chara">
+            <img class="art" src="../img/fill.png" alt="アルクスネ・キェルスタ">
+            <p class="caption">キェルスタ</p>
+          </div>
           <p>後悔の瞳</p>
           <p>
             アルクスネ・キェルスタ<br>
@@ -92,6 +116,18 @@
         <!-- アルクスネ・クリメンティーナ（Klimentīna Alksne） -->
         <section>
           <h4 id="Klimentīna_Alksne">アルクスネ・クリメンティーナ</h4>
+          <div class="pride">
+            <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
+            <p class="pronouns">代名詞：</p>
+            <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
+              <img class="pride-flag" src="../img/pride/" alt="" title="">
+            </a>
+            <br>
+          </div>
+          <div class="art-chara">
+            <img class="art" src="../img/fill.png" alt="アルクスネ・クリメンティーナ">
+            <p class="caption">クリメンティーナ</p>
+          </div>
           <p>性欲の瞳</p>
           <p>
             アルクスネ・クリメンティーナ<br>
@@ -117,6 +153,18 @@
         <!-- アルクスネ・リーリヤ（Līrija Alksne） -->
         <section>
           <h4 id="Līrija_Alksne">アルクスネ・リーリヤ</h4>
+          <div class="pride">
+            <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
+            <p class="pronouns">代名詞：</p>
+            <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
+              <img class="pride-flag" src="../img/pride/" alt="" title="">
+            </a>
+            <br>
+          </div>
+          <div class="art-chara">
+            <img class="art" src="../img/fill.png" alt="アルクスネ・リーリヤ">
+            <p class="caption">リーリヤ</p>
+          </div>
           <p>感情の瞳</p>
           <p>
             アルクスネ・リーリヤ<br>
