--- a/html/flame_dragon.html
+++ b/html/flame_dragon.html
@@ -79,6 +79,18 @@
           <!-- 閻魔塚沙々夢（Sasamu Enmazuka） -->
           <section>
             <h4 id="Sasamu_Enmazuka">沙々夢娘々</h4>
+            <div class="pride">
+              <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
+              <p class="pronouns">代名詞：</p>
+              <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
+                <img class="pride-flag" src="../img/pride/" alt="" title="">
+              </a>
+              <br>
+            </div>
+            <div class="art-chara">
+              <img class="art" src="../img/fill.png" alt="閻魔塚沙々夢">
+              <p class="caption">沙々夢</p>
+            </div>
             <p>天狗の姫</p>
             <p>
               本名：閻魔塚　沙々夢（えんまづか　ささむ）　Enmazuka Sasamu<br>
@@ -106,6 +118,18 @@
           <!-- いけはたハミ（Hami Ikehata） -->
           <section>
             <h4 id="Hami_Ikehata">いけはたハミ</h4>
+            <div class="pride">
+              <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
+              <p class="pronouns">代名詞：</p>
+              <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
+                <img class="pride-flag" src="../img/pride/" alt="" title="">
+              </a>
+              <br>
+            </div>
+            <div class="art-chara">
+              <img class="art" src="../img/fill.png" alt="いけはたハミ">
+              <p class="caption">ハミ</p>
+            </div>
             <p>
               いけはた　ハミ<br>
               Ikehata Hami
@@ -129,6 +153,18 @@
           <!-- ルンドゥプ・カリングポング・ルンドルプ・キドトドパ（Lhundup Kalingpong Lhundrup Kyidtodpa） -->
           <section>
             <h4 id="Lhundup_Kalingpong_Lhundrup_Kyidtodpa">ルンドゥプ・ルンドルプ</h4>
+            <div class="pride">
+              <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
+              <p class="pronouns">代名詞：</p>
+              <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
+                <img class="pride-flag" src="../img/pride/" alt="" title="">
+              </a>
+              <br>
+            </div>
+            <div class="art-chara">
+              <img class="art" src="../img/fill.png" alt="ルンドゥプ・カリングポング・ルンドルプ・キドトドパ">
+              <p class="caption">ルンドゥプ</p>
+            </div>
             <p>
               ルンドゥプ・カリングポング・ルンドルプ・キドトドパ<br>
               Lhundup Kalingpong Lhundrup Kyidtodpa
@@ -153,6 +189,18 @@
           <!-- 三ツ木姫娘（Himeko Mitsugi） -->
           <section>
             <h4 id="Himeko_Mitsugi">三ツ木姫娘</h4>
+            <div class="pride">
+              <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
+              <p class="pronouns">代名詞：</p>
+              <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
+                <img class="pride-flag" src="../img/pride/" alt="" title="">
+              </a>
+              <br>
+            </div>
+            <div class="art-chara">
+              <img class="art" src="../img/fill.png" alt="三ツ木姫娘">
+              <p class="caption">姫娘</p>
+            </div>
             <p>
               三ツ木　姫娘（みつぎ　ひめこ）<br>
               Mitsugi Himeko
@@ -176,6 +224,18 @@
           <!-- 築野居あや（Aya Tsunowi） -->
           <section>
             <h4 id="Aya_Tsunowi">築野居あや</h4>
+            <div class="pride">
+              <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
+              <p class="pronouns">代名詞：</p>
+              <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
+                <img class="pride-flag" src="../img/pride/" alt="" title="">
+              </a>
+              <br>
+            </div>
+            <div class="art-chara">
+              <img class="art" src="../img/fill.png" alt="築野居あや">
+              <p class="caption">あや</p>
+            </div>
             <p>
               築野居　あや（つのゐ　あや）<br>
               Tsunowi Aya
@@ -203,6 +263,18 @@
           <!-- 氷見英子（Hideko Himi） -->
           <section>
             <h4 id="Hideko_Himi">氷見英子</h4>
+            <div class="pride">
+              <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
+              <p class="pronouns">代名詞：</p>
+              <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
+                <img class="pride-flag" src="../img/pride/" alt="" title="">
+              </a>
+              <br>
+            </div>
+            <div class="art-chara">
+              <img class="art" src="../img/fill.png" alt="氷見英子">
+              <p class="caption">英子</p>
+            </div>
             <p>
               氷見　英子（ひみ　ひでこ）<br>
               Himi Hideko
@@ -226,6 +298,18 @@
           <!-- 烏ヶ原ころーねー（Korone Karasugahara） -->
           <section>
             <h4 id="Korone_Karasugahara">烏ヶ原ころーねー</h4>
+            <div class="pride">
+              <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
+              <p class="pronouns">代名詞：</p>
+              <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
+                <img class="pride-flag" src="../img/pride/" alt="" title="">
+              </a>
+              <br>
+            </div>
+            <div class="art-chara">
+              <img class="art" src="../img/fill.png" alt="烏ヶ原ころーねー">
+              <p class="caption">ころーねー</p>
+            </div>
             <p>
               烏ヶ原　ころーねー（からすがはら　ころーねー）<br>
               Karasugahara Korone
@@ -250,6 +334,18 @@
           <!-- 蜘蛛沙羅禁如（Kinnyo Kumosara） -->
           <section>
             <h4 id="Kinnyo_Kumosara">蜘蛛沙羅禁如</h4>
+            <div class="pride">
+              <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
+              <p class="pronouns">代名詞：</p>
+              <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
+                <img class="pride-flag" src="../img/pride/" alt="" title="">
+              </a>
+              <br>
+            </div>
+            <div class="art-chara">
+              <img class="art" src="../img/fill.png" alt="蜘蛛沙羅禁如">
+              <p class="caption">禁如</p>
+            </div>
             <p>病気洞窟のクモ女郎</p>
             <p>
               蜘蛛沙羅　禁如（くもさら　きんにょ）<br>
@@ -277,6 +373,18 @@
           <!-- 森涅壽美子（Sumiko Morine） -->
           <section>
             <h4 id="Sumiko_Morine">森涅壽美子</h4>
+            <div class="pride">
+              <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
+              <p class="pronouns">代名詞：</p>
+              <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
+                <img class="pride-flag" src="../img/pride/" alt="" title="">
+              </a>
+              <br>
+            </div>
+            <div class="art-chara">
+              <img class="art" src="../img/fill.png" alt="森涅壽美子">
+              <p class="caption">壽美子</p>
+            </div>
             <p>
               森涅　壽美子（もりね　きみこ）<br>
               Morine Kimiko
@@ -300,6 +408,18 @@
           <!-- 兎仏嘉田宝鈴（Housuzu Ubukata） -->
           <section>
             <h4 id="Housuzu_Ubukata">兎仏嘉田宝鈴</h4>
+            <div class="pride">
+              <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
+              <p class="pronouns">代名詞：</p>
+              <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
+                <img class="pride-flag" src="../img/pride/" alt="" title="">
+              </a>
+              <br>
+            </div>
+            <div class="art-chara">
+              <img class="art" src="../img/fill.png" alt="兎仏嘉田宝鈴">
+              <p class="caption">宝鈴</p>
+            </div>
             <p>
               兎仏嘉田　宝鈴（うぶかた　ほうすず）<br>
               Ubukata Housuzu
@@ -327,6 +447,18 @@
           <!-- 久求十阿奈香（Anaka Hisakyuuto） -->
           <section>
             <h4 id="Anaka_Hisakyuuto">久求十阿奈香</h4>
+            <div class="pride">
+              <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
+              <p class="pronouns">代名詞：</p>
+              <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
+                <img class="pride-flag" src="../img/pride/" alt="" title="">
+              </a>
+              <br>
+            </div>
+            <div class="art-chara">
+              <img class="art" src="../img/fill.png" alt="久求十阿奈香">
+              <p class="caption">阿奈香</p>
+            </div>
             <p>
               久求十　阿奈香（ひさきゅうと　あなか）<br>
               Hisakyuuto Anaka
@@ -350,6 +482,18 @@
           <!-- 錐ヶ宮ルーメン乃（Lumenno Kirigamiya） -->
           <section>
             <h4 id="Lumenno_Kirigamiya">錐ヶ宮ルーメン乃</h4>
+            <div class="pride">
+              <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
+              <p class="pronouns">代名詞：</p>
+              <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
+                <img class="pride-flag" src="../img/pride/" alt="" title="">
+              </a>
+              <br>
+            </div>
+            <div class="art-chara">
+              <img class="art" src="../img/fill.png" alt="錐ヶ宮ルーメン乃">
+              <p class="caption">ルーメン乃</p>
+            </div>
             <p>パチンコを愛する賭博神</p>
             <p>
               錐ヶ宮　ルーメン乃（きりがみや　ルーメンの）<br>
@@ -379,6 +523,18 @@
           <!-- 又橋早千恵（Sachie Matahashi） -->
           <section>
             <h4 id="Sachie_Matahashi">又橋早千恵</h4>
+            <div class="pride">
+              <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
+              <p class="pronouns">代名詞：</p>
+              <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
+                <img class="pride-flag" src="../img/pride/" alt="" title="">
+              </a>
+              <br>
+            </div>
+            <div class="art-chara">
+              <img class="art" src="../img/fill.png" alt="又橋早千恵">
+              <p class="caption">早千恵</p>
+            </div>
             <p>
               又橋　早千恵（またはし　さちえ）<br>
               Matahashi Sachie
@@ -402,6 +558,18 @@
           <!-- ソウマ魎呼（Ryoko Soma） -->
           <section>
             <h4 id="Ryoko_Soma">ソウマ魎呼</h4>
+            <div class="pride">
+              <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
+              <p class="pronouns">代名詞：</p>
+              <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
+                <img class="pride-flag" src="../img/pride/" alt="" title="">
+              </a>
+              <br>
+            </div>
+            <div class="art-chara">
+              <img class="art" src="../img/fill.png" alt="ソウマ魎呼">
+              <p class="caption">魎呼</p>
+            </div>
             <p>
               ソウマ　魎呼（ソウマ　りょうこ）<br>
               Soma Ryoko
@@ -425,6 +593,18 @@
           <!-- 厄史丸純子（Junko Yakushimaru） -->
           <section>
             <h4 id="Junko_Yakushimaru">厄史丸純子</h4>
+            <div class="pride">
+              <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
+              <p class="pronouns">代名詞：</p>
+              <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
+                <img class="pride-flag" src="../img/pride/" alt="" title="">
+              </a>
+              <br>
+            </div>
+            <div class="art-chara">
+              <img class="art" src="../img/fill.png" alt="厄史丸純子">
+              <p class="caption">純子</p>
+            </div>
             <p>
               厄史丸　純子（やくしまる　じゅんこ）<br>
               Yakushimaru Junko
@@ -533,6 +713,18 @@
         <!-- 理姫丸一姫（Kazuhime Rikimaru） -->
         <section>
           <h4 id="Kazuhime_Rikimaru">理姫丸一姫</h4>
+          <div class="pride">
+            <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
+            <p class="pronouns">代名詞：</p>
+            <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
+              <img class="pride-flag" src="../img/pride/" alt="" title="">
+            </a>
+            <br>
+          </div>
+          <div class="art-chara">
+            <img class="art" src="../img/fill.png" alt="理姫丸一姫">
+            <p class="caption">一姫</p>
+          </div>
           <p>
             理姫丸　一姫（りきまる　かずひめ）<br>
             Rikimaru Kazuhime
@@ -557,6 +749,18 @@
         <!-- 毘沙門天（Lord Bishamonten） -->
         <section>
           <h4 id="Bishamonten">毘沙門天</h4>
+          <div class="pride">
+            <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
+            <p class="pronouns">代名詞：</p>
+            <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
+              <img class="pride-flag" src="../img/pride/" alt="" title="">
+            </a>
+            <br>
+          </div>
+          <div class="art-chara">
+            <img class="art" src="../img/fill.png" alt="毘沙門天">
+            <p class="caption">毘沙門天</p>
+          </div>
           <p>
             毘沙門天（ヴァイシュラヴァナ）<br>
             Lord Bishamonten
@@ -580,6 +784,18 @@
         <!-- 大野二姫（Jihime Ono） -->
         <section>
           <h4 id="Jihime_Ono">大野二姫</h4>
+          <div class="pride">
+            <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
+            <p class="pronouns">代名詞：</p>
+            <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
+              <img class="pride-flag" src="../img/pride/" alt="" title="">
+            </a>
+            <br>
+          </div>
+          <div class="art-chara">
+            <img class="art" src="../img/fill.png" alt="大野二姫">
+            <p class="caption">二姫</p>
+          </div>
           <p>
             大野　二姫（おおの　じひめ）<br>
             Ono Jihime
@@ -604,6 +820,18 @@
         <!-- 増長天（Lord Zouchouten） -->
         <section>
           <h4 id="Zouchouten">増長天</h4>
+          <div class="pride">
+            <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
+            <p class="pronouns">代名詞：</p>
+            <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
+              <img class="pride-flag" src="../img/pride/" alt="" title="">
+            </a>
+            <br>
+          </div>
+          <div class="art-chara">
+            <img class="art" src="../img/fill.png" alt="増長天">
+            <p class="caption">増長天</p>
+          </div>
           <p>
             増長天（ヴィルーダカ）<br>
             Lord Zouchouten
@@ -627,6 +855,18 @@
         <!-- 雪村三姫（Miki Yukimaru） -->
         <section>
           <h4 id="Miki_Yukimaru">雪村三姫</h4>
+          <div class="pride">
+            <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
+            <p class="pronouns">代名詞：</p>
+            <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
+              <img class="pride-flag" src="../img/pride/" alt="" title="">
+            </a>
+            <br>
+          </div>
+          <div class="art-chara">
+            <img class="art" src="../img/fill.png" alt="雪村三姫">
+            <p class="caption">三姫</p>
+          </div>
           <p>
             雪村　三姫（ゆきむら　みき）<br>
             Yukimura Miki
@@ -651,6 +891,18 @@
         <!-- 持国天（Lord Jikokuten） -->
         <section>
           <h4 id="Jikokuten">持国天</h4>
+          <div class="pride">
+            <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
+            <p class="pronouns">代名詞：</p>
+            <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
+              <img class="pride-flag" src="../img/pride/" alt="" title="">
+            </a>
+            <br>
+          </div>
+          <div class="art-chara">
+            <img class="art" src="../img/fill.png" alt="持国天">
+            <p class="caption">持国天</p>
+          </div>
           <p>
             持国天（ドゥリタラーシュトラ）<br>
             Lord Jikokuten
@@ -674,6 +926,18 @@
         <!-- 古澤四姫（Shiki Furusawa） -->
         <section>
           <h4 id="Shiki_Furusawa">古澤四姫</h4>
+          <div class="pride">
+            <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
+            <p class="pronouns">代名詞：</p>
+            <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
+              <img class="pride-flag" src="../img/pride/" alt="" title="">
+            </a>
+            <br>
+          </div>
+          <div class="art-chara">
+            <img class="art" src="../img/fill.png" alt="古澤四姫">
+            <p class="caption">四姫</p>
+          </div>
           <p>
             古澤　四姫（ふるさわ　しき）<br>
             Furusawa Shiki
@@ -698,6 +962,18 @@
         <!-- 広目天（Lord Koumokuten） -->
         <section>
           <h4 id="Koumokuten">広目天</h4>
+          <div class="pride">
+            <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
+            <p class="pronouns">代名詞：</p>
+            <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
+              <img class="pride-flag" src="../img/pride/" alt="" title="">
+            </a>
+            <br>
+          </div>
+          <div class="art-chara">
+            <img class="art" src="../img/fill.png" alt="広目天">
+            <p class="caption">広目天</p>
+          </div>
           <p>
             広目天（ヴィルーパーシャ）<br>
             Lord Koumokuten
