--- a/html/hikigahara.html
+++ b/html/hikigahara.html
@@ -41,6 +41,18 @@
       <!-- 朴茶々丸（Chachamaru Paku） -->
       <section>
         <h4>朴茶々丸</h4>
+        <div class="pride">
+          <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
+          <p class="pronouns">代名詞：</p>
+          <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
+            <img class="pride-flag" src="../img/pride/" alt="" title="">
+          </a>
+          <br>
+        </div>
+        <div class="art-chara">
+          <img class="art" src="../img/fill.png" alt="朴茶々丸">
+          <p class="caption">茶々丸</p>
+        </div>
         <p>希望を破る森のジーディヤオ</p>
         <p>
           朴　茶々丸（ぱく　ちゃちゃまる）<br>
