--- a/html/nizi.html
+++ b/html/nizi.html
@@ -88,7 +88,8 @@
             </p>
             <p>
               誕生日：１０月１６日<br>
-              年齢：１０５歳（生活年齢）；２５歳（身体と同じ）（※）
+              年齢：１０５歳（生活年齢）<br>
+              　　　２５歳（身体と同じ）（※）
             </p>
             <p>あたいだね～。 \^w^</p>
             <p>奈落にある等活地獄の最後の姫である。システムの<ruby>主<rt>ホスト</rt></ruby>であるね。</p>
@@ -189,7 +190,7 @@
               性別：♀<br>
               性自認：ノンバイナリー<br>
               代名詞：彼女／奴（she/they）<br>
-              雌雄性：知るには若すぎるよー！！
+              雌雄性：アセクシャル
             </p>
             <p>
               種族：天狗<br>
@@ -257,7 +258,7 @@
               誕生日：<br>
               年齢：
             </p>
-            <p>自分の服を作るフェネックである。あたいの自己ケモノであるね。</p>
+            <p>自分の服を作るフェネックである。<ruby>郷鬼<rt>あたい</rt></ruby>の自己ケモノであるね。</p>
             <br>
             <a href="./gallery/nizi/Youko.html" title="美術館へ" target="topframe">美術館へ行きますか？</a>
             <br>
@@ -421,10 +422,17 @@
           </p>
           <p>
             ——<ruby>分身<rt>アルター</rt></ruby>の性自認と代名詞と雌雄性——<br>
-            錯誤：性自認はジェンダーフリュイドとジェンダーフラックスである。好んだ代名詞は彼女／いずれ（she/any）である。雌雄性は性行為を虫唾が走ったアロ＝エイスである。<br>
-            新星：性自認はノンバイナリー・ガールである。好んだ代名詞は<ruby>奴<rt>ジー</rt></ruby>／<ruby>奴<rt>ゼル</rt></ruby>（xe/xer）である。<br>
-            タモードヴァーラム：性自認はノンバイナリーである。好んだ代名詞は奴（they/them）である。雌雄性はグレイアセクシャルである。<br>
-            佰萬：性自認はアジェンダーである。好んだ代名詞は<ruby>奴<rt>イト</rt></ruby>／<ruby>奴<rt>イツ</rt></ruby>（it/its）である。雌雄性はパンロマンティックである。
+            錯誤：性自認はジェンダーフリュイドとジェンダーフラックスである。<br>
+            　　　好んだ代名詞は彼女／いずれ（she/any）である。<br>
+            　　　雌雄性は性行為を虫唾が走ったアロ＝エイスである。<br>
+            新星：性自認はノンバイナリー・ガールである。<br>
+            　　　好んだ代名詞は<ruby>奴<rt>ジー</rt></ruby>／<ruby>奴<rt>ゼル</rt></ruby>（xe/xer）である。<br>
+            タモードヴァーラム：性自認はノンバイナリーである。<br>
+            　　　　　　　　　　好んだ代名詞は奴（they/them）である。<br>
+            　　　　　　　　　　雌雄性はグレイアセクシャルである。<br>
+            佰萬：性自認はアジェンダーである。<br>
+            　　　好んだ代名詞は<ruby>奴<rt>イト</rt></ruby>／<ruby>奴<rt>イツ</rt></ruby>（it/its）である。<br>
+            　　　雌雄性はパンロマンティックである。
           </p>
           <p>
             誕生日：０３２３年６月２９日<br>
