--- a/html/obsidianrat.html
+++ b/html/obsidianrat.html
@@ -47,6 +47,18 @@
             <div class="heading">
               <h4>ライラック・ブラザーウィック</h4>
             </div>
+            <div class="pride">
+              <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
+              <p class="pronouns">代名詞：</p>
+              <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
+                <img class="pride-flag" src="../img/pride/" alt="" title="">
+              </a>
+              <br>
+            </div>
+            <div class="art-chara">
+              <img class="art" src="../img/fill.png" alt="ライラック・ブラザーウィック">
+              <p class="caption">ライラック</p>
+            </div>
             <div class="body">
               <p>神秘的な風の歌の囲い女</p>
               <p>
@@ -91,6 +103,18 @@
             <div class="heading">
               <h4>ハービー・チャッドボーン</h4>
             </div>
+            <div class="pride">
+              <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
+              <p class="pronouns">代名詞：</p>
+              <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
+                <img class="pride-flag" src="../img/pride/" alt="" title="">
+              </a>
+              <br>
+            </div>
+            <div class="art-chara">
+              <img class="art" src="../img/fill.png" alt="ハービー・チャッドボーン">
+              <p class="caption">ハービー</p>
+            </div>
             <div class="body">
               <p>執念深い風の王様</p>
               <p>
@@ -127,6 +151,18 @@
             <div class="heading">
               <h4>ヴィルヘルミナ・ベットガー・エーレンライヒ</h4>
             </div>
+            <div class="pride">
+              <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
+              <p class="pronouns">代名詞：</p>
+              <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
+                <img class="pride-flag" src="../img/pride/" alt="" title="">
+              </a>
+              <br>
+            </div>
+            <div class="art-chara">
+              <img class="art" src="../img/fill.png" alt="ヴィルヘルミナ・ベットガー・エーレンライヒ">
+              <p class="caption">ヴィルヘルミナ</p>
+            </div>
             <div class="body">
               <p><ruby>地獄の王様<rt>ヘーレンケーニグ</rt></ruby></p>
               <p>
@@ -158,6 +194,18 @@
             <div class="heading">
               <h4>藤井襟</h4>
             </div>
+            <div class="pride">
+              <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
+              <p class="pronouns">代名詞：</p>
+              <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
+                <img class="pride-flag" src="../img/pride/" alt="" title="">
+              </a>
+              <br>
+            </div>
+            <div class="art-chara">
+              <img class="art" src="../img/fill.png" alt="藤井襟">
+              <p class="caption">襟</p>
+            </div>
             <div class="body">
               <p>真夜の黒き翼</p>
               <p>
@@ -186,6 +234,18 @@
           <div class="section">
             <div class="heading">
               <h4>岸本龍志</h4>
+            </div>
+            <div class="pride">
+              <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
+              <p class="pronouns">代名詞：</p>
+              <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
+                <img class="pride-flag" src="../img/pride/" alt="" title="">
+              </a>
+              <br>
+            </div>
+            <div class="art-chara">
+              <img class="art" src="../img/fill.png" alt="岸本龍志">
+              <p class="caption">龍志</p>
             </div>
             <div class="body">
               <p>コマ犬の金色獅子滅悪魔者</p>
@@ -216,6 +276,18 @@
             <div class="heading">
               <h4>リビェナ・クリージョヴァー</h4>
             </div>
+            <div class="pride">
+              <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
+              <p class="pronouns">代名詞：</p>
+              <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
+                <img class="pride-flag" src="../img/pride/" alt="" title="">
+              </a>
+              <br>
+            </div>
+            <div class="art-chara">
+              <img class="art" src="../img/fill.png" alt="リビェナ・クリージョヴァー＝マハーチュコヴァー">
+              <p class="caption">リビェナ</p>
+            </div>
             <div class="body">
               <p>大臣の忠実な犬少女</p>
               <p>
@@ -244,6 +316,18 @@
           <div class="section">
             <div class="heading">
               <h4>工藤伊紀</h4>
+            </div>
+            <div class="pride">
+              <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
+              <p class="pronouns">代名詞：</p>
+              <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
+                <img class="pride-flag" src="../img/pride/" alt="" title="">
+              </a>
+              <br>
+            </div>
+            <div class="art-chara">
+              <img class="art" src="../img/fill.png" alt="工藤伊紀">
+              <p class="caption">伊紀</p>
             </div>
             <div class="body">
               <p>混乱した過激派</p>
@@ -278,6 +362,13 @@
           <div class="section">
             <div class="heading">
               <h4>崎本朝次郎</h4>
+            </div>
+            <div class="art-chara">
+              <img class="art" src="../img/fill.png" alt="崎本朝次郎">
+              <p class="caption">朝次郎</p>
+            </div>
+            <div class="pride">
+              <p class="pronouns">代名詞：he/him</p>
             </div>
             <div class="body">
               <p>子供達の卑劣な敵</p>
@@ -333,6 +424,18 @@
             <div class="heading">
               <h4>ラインハルト・シッケンダンツ</h4>
             </div>
+            <div class="pride">
+              <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
+              <p class="pronouns">代名詞：</p>
+              <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
+                <img class="pride-flag" src="../img/pride/" alt="" title="">
+              </a>
+              <br>
+            </div>
+            <div class="art-chara">
+              <img class="art" src="../img/fill.png" alt="ラインハルト・シッケンダンツ">
+              <p class="caption">ラインハルト</p>
+            </div>
             <div class="body">
               <p>
                 ラインハルト・シッケンダンツ<br>
@@ -360,6 +463,18 @@
           <div class="section">
             <div class="heading">
               <h4>臭鼬悟狸</h4>
+            </div>
+            <div class="pride">
+              <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
+              <p class="pronouns">代名詞：</p>
+              <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
+                <img class="pride-flag" src="../img/pride/" alt="" title="">
+              </a>
+              <br>
+            </div>
+            <div class="art-chara">
+              <img class="art" src="../img/fill.png" alt="臭鼬悟狸">
+              <p class="caption">悟狸</p>
             </div>
             <div class="body">
               <p>
@@ -390,6 +505,18 @@
             <div class="heading">
               <h4>橘純夫</h4>
             </div>
+            <div class="pride">
+              <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
+              <p class="pronouns">代名詞：</p>
+              <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
+                <img class="pride-flag" src="../img/pride/" alt="" title="">
+              </a>
+              <br>
+            </div>
+            <div class="art-chara">
+              <img class="art" src="../img/fill.png" alt="橘純夫">
+              <p class="caption">純夫</p>
+            </div>
             <div class="body">
               <p>
                 橘　純夫（たちばな　すみお）<br>
@@ -416,6 +543,18 @@
           <div class="section">
             <div class="heading">
               <h4>竹乃家締丸</h4>
+            </div>
+            <div class="pride">
+              <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
+              <p class="pronouns">代名詞：</p>
+              <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
+                <img class="pride-flag" src="../img/pride/" alt="" title="">
+              </a>
+              <br>
+            </div>
+            <div class="art-chara">
+              <img class="art" src="../img/fill.png" alt="竹乃家締丸">
+              <p class="caption">締丸</p>
             </div>
             <div class="body">
               <p>
